--- a/css/styleDE.css
+++ b/css/styleDE.css
@@ -126,7 +126,8 @@ body {
     width: 100%;
     height: 300px;
     object-fit: cover;
-    border-radius: 8px;
+    border-radius: 12px;
+    margin: 10px;
 }
 
 
@@ -158,7 +159,9 @@ body {
     background-color: #0098b3;
 }
 
-.name-mark {
+.name-mark h3 a{
+    text-decoration: none;
+
     display: flex;
     flex-direction: row;
 }
