--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,20 @@
     box-sizing: border-box;
 }
 
+
+body {
+    background-image: url('/img/background.png');
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+
+
 /* Header */
 #login {
     display: flex;
@@ -20,7 +34,7 @@
 }
 
 .headerSection {
-    background-color: #CF362C;
+    background-color: #a62921;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -77,7 +91,6 @@ body {
 }
 
 .bodyCards {
-    background-color: #FF5449;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
@@ -113,7 +126,6 @@ body {
     font-family: Rubik;
     flex-wrap: wrap;
     width: 30%;
-    background-color: #FF5449;
     justify-content: center;
 }
 
@@ -126,7 +138,6 @@ body {
 
 .nav-buttons ul{
     display: flex; /* Alinea los botones en horizontal */
-    background-color: #FF5449;
     padding: 10px;
     font-weight: 500;
     justify-content: space-around;
@@ -143,7 +154,6 @@ body {
 .nav-buttons ul li {
     font-size: 1.5rem;
     color: #ffffff;
-    background-color: #FF5449;
 }
 
 .nav-buttons ul li a {
@@ -151,7 +161,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #FF5449;
+    background-color: rgba(0, 0, 0, 0.315);
     font-size: 1.1rem;
     border-radius: 25px;
     text-decoration: none;
@@ -260,4 +270,34 @@ body {
 .card-link {
     text-decoration: none;
     color: inherit; /* Mantiene el color del texto actual */
+}
+
+
+
+footer {
+    color: #ffffff;
+    text-align: center;
+    padding: 20px;
+    font-size: 0.9rem;
+    margin-top: 20px;
+}
+
+.footer-container {
+    max-width: 900px;
+    margin: 0 auto;
+    line-height: 1.6;
+}
+
+.footer-container p {
+    margin: 10px 0;
+}
+
+.footer-container a {
+    color: #FFFF;
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+
+.footer-container a:hover {
+    color: #ffffff;
 }
