--- a/css/styleDE.css
+++ b/css/styleDE.css
@@ -7,7 +7,7 @@
 
 /* Header */
 
-.headerSection {
+.header-section {
     background-color: #CF362C;
     display: flex;
     justify-content: space-around;
@@ -42,11 +42,11 @@
 }
 
 .nav-buttons ul{
-    display: flex; /* Alinea los botones en horizontal */
+    display: flex; 
     padding: 10px;
     font-weight: 500;
     justify-content: space-around;
-    gap: 20px; /* Espaciado entre los botones */
+    gap: 20px; 
 }
 
 .nav-buttons ul {
@@ -62,7 +62,7 @@
 }
 
 .nav-buttons ul li a {
-    padding: 10px 20px; /* Espaciado interno de los botones */
+    padding: 10px 20px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -159,9 +159,8 @@ body {
     background-color: #0098b3;
 }
 
-.name-mark h3 a{
+.name-mark {
     text-decoration: none;
-
     display: flex;
     flex-direction: row;
 }
@@ -285,22 +284,23 @@ body {
 
         /* Estilo para el formulario de reseñas */
         .add-review {
-            background-color: #CF362C;
+            background-color: #FFFF;
             margin-top: 100px;
             padding: 20px; /* Agregar padding para separar los elementos */
             border-radius: 10px;
         }
         
         .add-review form {
+            padding: 10px;
             display: flex;
             flex-direction: column;
         }
         
         .add-review textarea {
-            padding: 10px;
+            padding: 15px;
             font-size: 1rem;
             width: 100%;
-            height: 100px;
+            height: 50px;
             border-radius: 10px;
             border: 1px solid #ccc;
             margin-bottom: 15px;
@@ -320,7 +320,7 @@ body {
             font-size: 1rem;
             padding: 5px;
             border-radius: 5px;
-            border: 1px solid #ccc;
+            border: 1px solid #b62a2a;
         }
         
         .submit-review {
@@ -336,3 +336,90 @@ body {
         .submit-review:hover {
             background-color: #0098b3;
         }
+
+
+
+        footer {
+            background-color: #CF362C;
+            color: #ffffff;
+            text-align: center;
+            padding: 20px;
+            font-size: 0.9rem;
+            margin-top: 20px;
+        }
+        
+        .footer-container {
+            max-width: 900px;
+            margin: 0 auto;
+            line-height: 1.6;
+        }
+        
+        .footer-container p {
+            margin: 10px 0;
+        }
+        
+        .footer-container a {
+            color: #FFFF;
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
+        
+        .footer-container a:hover {
+            color: #ffffff;
+        }
+
+
+        @media only screen and (max-width : 900px) {
+            
+            .header-section {
+                background-color: #CF362C;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-around;
+                align-items: center;
+                height: 90px;
+            }
+            
+
+            .nav-buttons ul{
+                display: flex; 
+                padding: 10px;
+                font-weight: 500;
+                justify-content: space-around;
+                gap: 20px; 
+            }
+            
+            .nav-buttons ul {
+                list-style: none; /* Elimina los puntos de la lista */
+                padding: 0;
+                margin: 0;
+                display: flex; /* Mantiene los elementos en línea horizontal */
+            }
+            
+            .nav-buttons ul li {
+                font-size: 1.5rem;
+                color: #ffffff;
+            }
+            
+            .nav-buttons ul li a {
+                padding: 10px 20px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                background-color: #FF5449;
+                font-size: 1.1rem;
+                border-radius: 25px;
+                text-decoration: none;
+                border: 2px solid #ffffff;
+                color: white;
+                cursor: pointer;
+                transition: background-color 0.3s ease;
+            }
+            
+            .nav-buttons ul li a:hover {
+                background-color: #ffffff;
+                color: #3C3C43;
+            }
+            
+
+            }
