--- a/css/style.css
+++ b/css/style.css
@@ -176,6 +176,9 @@ body {
     color: #3C3C43;
 }
 
+li a i {
+    margin-right: 8px; /* Espacio entre el ícono y el texto */
+  }
 
 /* Estilo general para las tarjetas */
 .card {
